--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
                 </javac>
 	</target>
         <!--Compiling the test cases and running unit test -->
-       <target name="test" depends="compile">
+       <target name="test">
             <javac includeantruntime="true"
          	srcdir="test" 
 			destdir="build/test/test_classes" 
@@ -50,7 +50,7 @@
   </target>
 
 	
-	<target name="war" depends="test">
+	<target name="war" depends="compile">
 		<war destfile="dist/AntExample.war" webxml="WebContent/WEB-INF/web.xml">
 			<fileset dir="WebContent"/>
 			<lib dir="WebContent/WEB-INF/lib"/>
