--- a/roles/tomcat/tasks/deploy_app.yml
+++ b/roles/tomcat/tasks/deploy_app.yml
@@ -1,3 +1,3 @@
 ---
 - name: Deploy the new WAR file to target servers
-  get_url: url=http://admin:admin123@3.16.130.227:8081/repository/maven-snapshots/MY-POC/POC-CI-CD/1.0-SNAPSHOT/POC-CI-CD-1.0-20190824.182234-1.war  dest=/opt/tomcat8/webapps
+  get_url: url=http://{{nexus_user}}:{{nexus_pwd}}@{{ansible_ec2_public_ipv4}}:8081/repository/maven-snapshots/MY-POC/POC-CI-CD/1.0-SNAPSHOT/POC-CI-CD-1.0-20190824.182234-1.war  dest=/opt/tomcat8/webapps
